# algoai

./: .gitignore  README.md  pyproject.toml
algoai/huffman/: codec.py
algoai/lz78/: codec.py
docs/: määrit.odt  määrittelydokumentti  viikko1
src/: codec.py  huffman_algorithm.py  lz78_algorithm.py
test_files/: anti_oedipus.txt  random.txt  test.txt  zero_same.txt
testikansio/: tekstitesti.txt
tests/: huffman_test.py  huffman_test_compression.py  lz78_test.py  ui_file.py
