[project]
name = "algoai"
version = "0.1.0"
description = "Data compression algorithm benchmarking"
authors = [
    {name = "Eetos",email = "eetosjar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
  "coverage (>=7.11.0,<8.0.0)",
  "pytest"
]





[tool.coverage.report]
show_missing = true
omit = [
    "*/__init__.py",
    "tests/test_app.py"
]